# reorient

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: slack-reader.md
.claude/skills/: catchup.skill  standup.skill
.claude/skills/catchup/: SKILL.md
.claude/skills/explore/: SKILL.md
.claude/skills/standup/: SKILL.md
scripts/: catchup.py  standup.py
src/reorient/: __init__.py  drive.py  github.py  linear.py  meta.py  slack.py  watchlist.py
